# IBsdiff

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yb/bsdiff/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
bsdiffLib/: CMakeLists.txt  build.gradle
bsdiffLib/src/main/: AndroidManifest.xml
bsdiffLib/src/main/cpp/: bspatch.c  native-lib.cpp
bsdiffLib/src/main/java/com/yb/lib/bsdiff/: BsdiffUtil.java
bsdiffLib/src/main/res/values/: strings.xml
ext/test/: new.apk  old.apk  patch
gradle/wrapper/: gradle-wrapper.properties
